--- a/codility/codility/codility.vcxproj
+++ b/codility/codility/codility.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="codility.cpp" />
+    <ClCompile Include="QuickSort.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QuickSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
